; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sound/pci/extr_hdspe-pcm.c_hdspechan_getptr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sound/pci/extr_hdspe-pcm.c_hdspechan_getptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sc_pcminfo = type { %struct.sc_info* }
%struct.sc_info = type { i32 }
%struct.sc_chinfo = type { %struct.sc_pcminfo* }

@HDSPE_STATUS_REG = common dso_local global i32 0, align 4
@HDSPE_BUF_POSITION_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @hdspechan_getptr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hdspechan_getptr(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sc_pcminfo*, align 8
  %6 = alloca %struct.sc_chinfo*, align 8
  %7 = alloca %struct.sc_info*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = bitcast i8* %10 to %struct.sc_chinfo*
  store %struct.sc_chinfo* %11, %struct.sc_chinfo** %6, align 8
  %12 = load %struct.sc_chinfo*, %struct.sc_chinfo** %6, align 8
  %13 = getelementptr inbounds %struct.sc_chinfo, %struct.sc_chinfo* %12, i32 0, i32 0
  %14 = load %struct.sc_pcminfo*, %struct.sc_pcminfo** %13, align 8
  store %struct.sc_pcminfo* %14, %struct.sc_pcminfo** %5, align 8
  %15 = load %struct.sc_pcminfo*, %struct.sc_pcminfo** %5, align 8
  %16 = getelementptr inbounds %struct.sc_pcminfo, %struct.sc_pcminfo* %15, i32 0, i32 0
  %17 = load %struct.sc_info*, %struct.sc_info** %16, align 8
  store %struct.sc_info* %17, %struct.sc_info** %7, align 8
  %18 = load %struct.sc_info*, %struct.sc_info** %7, align 8
  %19 = getelementptr inbounds %struct.sc_info, %struct.sc_info* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @snd_mtxlock(i32 %20)
  %22 = load %struct.sc_info*, %struct.sc_info** %7, align 8
  %23 = load i32, i32* @HDSPE_STATUS_REG, align 4
  %24 = call i32 @hdspe_read_2(%struct.sc_info* %22, i32 %23)
  store i32 %24, i32* %8, align 4
  %25 = load %struct.sc_info*, %struct.sc_info** %7, align 8
  %26 = getelementptr inbounds %struct.sc_info, %struct.sc_info* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @snd_mtxunlock(i32 %27)
  %29 = load i32, i32* %8, align 4
  %30 = load i32, i32* @HDSPE_BUF_POSITION_MASK, align 4
  %31 = and i32 %29, %30
  store i32 %31, i32* %9, align 4
  %32 = load i32, i32* %9, align 4
  %33 = mul nsw i32 %32, 2
  store i32 %33, i32* %9, align 4
  %34 = load i32, i32* %9, align 4
  ret i32 %34
}

declare dso_local i32 @snd_mtxlock(i32) #1

declare dso_local i32 @hdspe_read_2(%struct.sc_info*, i32) #1

declare dso_local i32 @snd_mtxunlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
